samples/_failures_safe/1761547602_da469e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5dd46b9e.c: In function ‘main’:
./samples/SAFE/__tmp_5dd46b9e.c:150: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_5dd46b9e.c:149:14: note: to match this ‘(’
  149 |     if (fgets(input_buffer, sizeof(input_buffer), stdin
      |              ^
./samples/SAFE/__tmp_5dd46b9e.c:149:5: error: expected declaration or statement at end of input
  149 |     if (fgets(input_buffer, sizeof(input_buffer), stdin
      |     ^~
